--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url= jdbc:mysql://localhost:3306/skipthequeue
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jackson.default-property-inclusion = NON_NULL
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
