--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.contextPath=/foodattable/api/
+
 spring.datasource.url= jdbc:mysql://localhost:3306/skipthequeue
 spring.datasource.username=root
 spring.datasource.password=root
