--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <groupId>com.food.table</groupId>
     <artifactId>food-table</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>food-table</name>
     <description>Backend project for food table app</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
