* removed default port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8080
-server.servlet.contextPath=/foodattable/api/
+server.port=${PORT:8080}
+#server.servlet.contextPath=/foodattable/api/
 
 spring.datasource.url= jdbc:mysql://j8cc0hy5bjui52j7:x5wefav4et28ih4s@enqhzd10cxh7hv2e.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/h45tgyv3y6ccyp9x
 spring.datasource.username=j8cc0hy5bjui52j7
