--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
 
-spring.datasource.url= jdbc:mysql://j8cc0hy5bjui52j7:x5wefav4et28ih4s@enqhzd10cxh7hv2e.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/h45tgyv3y6ccyp9x
-spring.datasource.username=j8cc0hy5bjui52j7
-spring.datasource.password=x5wefav4et28ih4s
+spring.datasource.url= jdbc:mysql://country-broot-db.czh71h7ycnny.ap-south-1.rds.amazonaws.com:3306/skipthequeue
+spring.datasource.username=admin
+spring.datasource.password=password
 
 spring.jackson.default-property-inclusion = NON_NULL
 
