--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>org.apache.lucene</groupId>
+		  <artifactId>lucene-spatial</artifactId>
+		  <version>8.2.0</version>
+		</dependency>
+		
+		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		</dependency>
