Image handling aws (#20)
* Check

* Image Handling

* Exception handling, log and review comment fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,21 @@ spring.datasource.url= jdbc:mysql://country-broot-db.czh71h7ycnny.ap-south-1.rds
 spring.datasource.username=admin
 spring.datasource.password=password
 
+
 spring.jackson.default-property-inclusion = NON_NULL
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+log.file.pattern=/cb-logs/cb-foodtablebackend/foodtablebackend-%d{-dd-MMMM-yyyy}-%i.log.gz
+log.file.name=/country-broot/food-table-backend/food-table-backend.log
+log.file.size=50 MB
+log.level=INFO
+log.console.level=INFO
+log.rollover.count=20
+
+s3.access.name=AKIAJNK3JL327NLL4ONA
+s3.access.secret=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
+s3.bucket.restaurantName=countrybroot/restaurant/
+s3.bucket.region=ap-south-1
