--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,27 @@ s3.access.name=AKIAJNK3JL327NLL4ONA
 s3.access.secret=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
 s3.bucket.restaurantName=countrybroot/restaurant/
 s3.bucket.region=ap-south-1
+
+# Email config start
+ 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=25
+spring.mail.username=foodattable.official@gmail.com
+spring.mail.password=food@table.official
+
+# Other properties
+#spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+ 
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+ 
+# SSL, post 465
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+# Email config end
