--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20190722</version>
+		</dependency>		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
