--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.url= jdbc:mysql://country-broot-db.czh71h7ycnny.ap-south-1.rds
 spring.datasource.username=admin
 spring.datasource.password=password
 
-
 spring.jackson.default-property-inclusion = NON_NULL
 
 spring.jpa.show-sql=true
@@ -46,3 +45,7 @@ spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 
 # Email config end
+
+# SNS configuration
+sns.arn.topicname=arn:aws:sns:ap-south-1:231627051407:Push-notification-CB
+sns.app.endpointTRN=arn:aws:sns:ap-south-1:231627051407:app/GCM/CountryBroot
