Order API integrated (#15)
* Order API: initial commit

* Order API: cart entity file added

* Order API: missing files added

* Order API Response Issue Fix

* Order: Exception and restaurant table added

* Order: Exception management improved and cart quantity validation added

* Order: create order response updated

* Email: username details updated

* Email: email confirmation mark as static

* Email: to address changed

* Email: runtime error issue logged

Co-authored-by: Jeeva558 <jeeva.selvam558@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ s3.bucket.region=ap-south-1
  
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
-spring.mail.username=foodattable.official@gmail.com
-spring.mail.password=food@table.official
+spring.mail.username=brootcountry@gmail.com
+spring.mail.password=Admin123@
 
 # Other properties
 #spring.mail.properties.mail.debug=true
