--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
       run: |
         bash build.sh
         docker login --username=${{ secrets.TREESCALE_USERNAME }} --password=${{ secrets.TREESCALE_PASSWORD }} 
-        docker push countrybroot/backend:latest
+        docker push countrybroot/backend
