--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ s3.access.secret=AoATYBZzZIezdiz2/C/ip2n9ShjEjwpABoRhuv0I
 s3.bucket.restaurantName=countrybroot/restaurant/
 s3.bucket.region=ap-south-1
 
+#auth key
+app.secretkey=926D96C90030DD58429D2751AC1BDBBC
+
 # Email config start
  
 spring.mail.host=smtp.gmail.com
