--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,7 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 # SNS configuration
 sns.arn.topicname=arn:aws:sns:ap-south-1:231627051407:Push-notification-CB
 sns.app.endpointTRN=arn:aws:sns:ap-south-1:231627051407:app/GCM/CountryBroot
+
+
+#Reverse proxy fix
+hostname = ${HOSTNAME:/}
