--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=${PORT:8080}
+server.servlet.context-path=${CONTEXT_PATH:/}
 
 spring.datasource.url= jdbc:mysql://country-broot-db.czh71h7ycnny.ap-south-1.rds.amazonaws.com:3306/skipthequeue
 spring.datasource.username=admin
