--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
             <artifactId>json</artifactId>
             <version>20190722</version>
         </dependency>
+        
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		</dependency>
+		        
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
