--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ log.level=INFO
 log.console.level=INFO
 log.rollover.count=20
 
-s3.access.name=AKIAJNK3JL327NLL4ONA
-s3.access.secret=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
-s3.bucket.restaurantName=countrybroot/restaurant/
+s3.access.name=AKIAIKQGMOF2VGBI4MBA
+s3.access.secret=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
+s3.bucket.restaurantName=countrybroott/restaurant/
 s3.bucket.region=ap-south-1
 
 #auth key
@@ -50,8 +50,8 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 # Email config end
 
 # SNS configuration
-sns.arn.topicname=arn:aws:sns:ap-south-1:231627051407:Push-notification-CB
-sns.app.endpointTRN=arn:aws:sns:ap-south-1:231627051407:app/GCM/CountryBroot
+sns.arn.topicname=arn:aws:sns:ap-southeast-1:779360542918:Push-notification-CB				  
+sns.app.endpointTRN=arn:aws:sns:ap-southeast-1:779360542918:app/GCM/CountryBroot
 
 #Reverse proxy fix
 hostname = ${HOSTNAME:localhost:8080}
