--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
 
-spring.datasource.url= jdbc:mysql://country-broot-db.czh71h7ycnny.ap-south-1.rds.amazonaws.com:3306/skipthequeue
-spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jackson.default-property-inclusion = NON_NULL
 
@@ -17,20 +17,20 @@ log.level=INFO
 log.console.level=INFO
 log.rollover.count=20
 
-s3.access.name=AKIAIKQGMOF2VGBI4MBA
-s3.access.secret=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
-s3.bucket.restaurantName=countrybroott/restaurant/
-s3.bucket.region=ap-south-1
+s3.access.name=${AWS_ACCESS_KEY}
+s3.access.secret=${AWS_SECRET_KEY}
+s3.bucket.restaurantName=${S3_BUCKET_NAME}
+s3.bucket.region=${AWS_REGION}
 
 #auth key
-app.secretkey=926D96C90030DD58429D2751AC1BDBBC
+app.secretkey=${APP_SECRET_KEY}
 
 # Email config start
  
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
-spring.mail.username=brootcountry@gmail.com
-spring.mail.password=Admin123@
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 
 # Other properties
 #spring.mail.properties.mail.debug=true
@@ -50,8 +50,8 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 # Email config end
 
 # SNS configuration
-sns.arn.topicname=arn:aws:sns:ap-southeast-1:779360542918:Push-notification-CB				  
-sns.app.endpointTRN=arn:aws:sns:ap-southeast-1:779360542918:app/GCM/CountryBroot
+sns.arn.topicname=${SNS_TOPIC_ARN}			  
+sns.app.endpointTRN=${SNS_ENDPOINT_ARN}
 
 #Reverse proxy fix
 hostname = ${HOSTNAME:localhost:8080}
