--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,8 @@ sns.app.endpointTRN=${SNS_ENDPOINT_ARN}
 
 #Reverse proxy fix
 hostname = ${HOSTNAME:localhost:8080}
+
+#redis connection factory
+spring.cache.type=${CACHE_TYPE}
+spring.redis.host=${CACHE_HOST}
+spring.redis.port=${CACHE_PORT}
