--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: joschi/setup-jdk@v1
         with:
           java-version: "11"
+      - name: Setup Envoirnment
+        run: docker-compose up -d
       - name: Build Docker Image
         run: mvn package
         env:
@@ -36,6 +38,9 @@ jobs:
           SNS_TOPIC_ARN: ${{ secrets.DEV_SNS_TOPIC_ARN }}
           SNS_ENDPOINT_ARN: ${{ secrets.DEV_SNS_ENDPOINT_ARN }}
           APP_SECRET_KEY: ${{ secrets.DEV_APP_SECRET_KEY }}
+          CACHE_TYPE: "redis"
+          CACHE_HOST: "localhost"
+          CACHE_PORT: 6379
       - name: Publish to Docker Hub
         run: |
           docker login --username=${{ secrets.TREESCALE_USERNAME }} --password=${{ secrets.TREESCALE_PASSWORD }}
