--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=${PORT:8080}
+server.port=8080
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://countrybroot.ctzay8evgkli.ap-south-1.rds.amazonaws.com/skipthequeue
+spring.datasource.username=admin
+spring.datasource.password=password
 
 spring.jackson.default-property-inclusion = NON_NULL
 
@@ -17,20 +17,20 @@ log.level=INFO
 log.console.level=INFO
 log.rollover.count=20
 
-s3.access.name=${AWS_ACCESS_KEY}
-s3.access.secret=${AWS_SECRET_KEY}
-s3.bucket.restaurantName=${S3_BUCKET_NAME}
-s3.bucket.region=${AWS_REGION}
+s3.access.name=AKIAIKQGMOF2VGBI4MBA
+s3.access.secret=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
+s3.bucket.restaurantName=countrybroott/restaurant/
+s3.bucket.region=ap-south-1
 
 #auth key
-app.secretkey=${APP_SECRET_KEY}
+app.secretkey=926D96C90030DD58429D2751AC1BDBBC
 
 # Email config start
  
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=brootcountry@gmail.com
+spring.mail.password=Admin123@
 
 # Other properties
 #spring.mail.properties.mail.debug=true
@@ -50,13 +50,13 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 # Email config end
 
 # SNS configuration
-sns.arn.topicname=${SNS_TOPIC_ARN}			  
-sns.app.endpointTRN=${SNS_ENDPOINT_ARN}
+sns.arn.topicname=arn:aws:sns:ap-southeast-1:779360542918:Push-notification-CB		  
+sns.app.endpointTRN=arn:aws:sns:ap-southeast-1:779360542918:app/GCM/CountryBroot
 
 #Reverse proxy fix
-hostname = ${HOSTNAME:localhost:8080}
+hostname = countrybroot.com/api
 
 #redis connection factory
-spring.cache.type=${CACHE_TYPE}
-spring.redis.host=${CACHE_HOST}
-spring.redis.port=${CACHE_PORT}
+spring.cache.type=redis
+spring.redis.host=redis
+spring.redis.port=6379
