--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,7 @@ hostname = countrybroot.com/api
 spring.cache.type=redis
 spring.redis.host=redis
 spring.redis.port=6379
+
+#cashfree
+cashfree.appId=205423e0db8f8f05fc335a55324502
+cashfree.secretKey=f9f61c48af2c8fef7bf849421339b4a92b1d36ee
